updated cuda portion

--- a/e4750/hw1/cuda.ipynb
+++ b/e4750/hw1/cuda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "source": [
     "\"\"\"\n",
     "The code in this file is part of the instructor-provided template for Assignment-1, task-2, Fall 2021. \n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "source": [
     "def average_time(method_name, N=1024, iteration=10):\n",
     "    \"\"\"\n",
@@ -336,20 +336,49 @@
     "        print('No such method name!')\n",
     "\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
+    "def plotting(time_explicit, time_implicit, time_gpuarynp, time_gpuary, time_host, L):\n",
+    "    plt.figure()\n",
+    "    plt.plot(L,time_explicit,label='explicit')\n",
+    "    plt.plot(L,time_implicit,label='implicit')\n",
+    "    plt.plot(L,time_gpuarynp,label='gpuarynp')\n",
+    "    plt.plot(L,time_gpuary,label='gpuary')\n",
+    "    plt.plot(L,time_host,label='host')\n",
+    "    plt.semilogx()\n",
+    "    plt.semilogy()\n",
+    "    plt.legend()\n",
+    "    plt.grid()\n",
+    "    plt.xlabel('Length of vectors')\n",
+    "    plt.ylabel('Processing Time (ms)')\n",
+    "    plt.title('comparison of addtional function')\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def main():\n",
     "    # Define the number of iterations and starting lengths of vectors\n",
     "    N = 1024\n",
     "    iteration = 1\n",
     "    \n",
     "    # Create an instance of the deviceAdd class\n",
-    "    # adop = deviceAdd()\n",
-    "    # a = np.random.rand(N).astype(np.float32)\n",
-    "    # b = np.random.rand(N).astype(np.float32)\n",
-    "    # c, time_alc, time_cpt = adop.explicitAdd(a,b,N)\n",
+    "    adop = deviceAdd()\n",
+    "    a = np.random.rand(N).astype(np.float32)\n",
+    "    b = np.random.rand(N).astype(np.float32)\n",
+    "    c, time_alc, time_cpt = adop.explicitAdd(a,b,N)\n",
     "    # print(c, time_alc, time_cpt)\n",
     "\n",
     "    # Perform addition tests for increasing lengths of vectors\n",
     "    # L = 10, 100, 1000 ..., (You can use np.random.randn to generate two vectors)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # Compare outputs.\n",
+    "\n",
+    "    # Plot the compute times\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def record():\n",
+    "    iteration = 1\n",
     "    L = []\n",
     "    for i in range(8): L.append(10**(i+1))\n",
     "\n",
@@ -385,13 +414,29 @@
     "        time_alc,_ = average_time('host', N=l, iteration=iteration)\n",
     "        time_host.append(time_alc)\n",
     "\n",
+    "    np.save('./cuda/time_explicit_alc.npy',time_explicit_alc)\n",
+    "    np.save('./cuda/time_explicit_cpt.npy',time_explicit_cpt) \n",
+    "\n",
+    "    np.save('./cuda/time_implicit_alc.npy',time_implicit_alc)\n",
+    "    np.save('./cuda/time_implicit_cpt.npy',time_implicit_cpt)\n",
+    "\n",
+    "    np.save('./cuda/time_gpuarynp.npy',time_gpuarynp)\n",
+    "\n",
+    "    np.save('./cuda/time_gpuary_alc.npy',time_gpuary_alc)\n",
+    "    np.save('./cuda/time_gpuary_cpt.npy',time_gpuary_cpt)\n",
+    "\n",
+    "    np.save('./cuda/time_host.npy',time_host)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    record()\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "    # Compare outputs.\n",
     "\n",
-    "    # Plot the compute times"
+    "\n",
+    "\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -400,21 +445,7 @@
    "cell_type": "code",
    "execution_count": 94,
    "source": [
-    "def plotting(time_explicit, time_implicit, time_gpuarynp, time_gpuary, time_host, L):\n",
-    "    plt.figure()\n",
-    "    plt.plot(L,time_explicit,label='explicit')\n",
-    "    plt.plot(L,time_implicit,label='implicit')\n",
-    "    plt.plot(L,time_gpuarynp,label='gpuarynp')\n",
-    "    plt.plot(L,time_gpuary,label='gpuary')\n",
-    "    plt.plot(L,time_host,label='host')\n",
-    "    plt.semilogx()\n",
-    "    plt.semilogy()\n",
-    "    plt.legend()\n",
-    "    plt.grid()\n",
-    "    plt.xlabel('Length of vectors')\n",
-    "    plt.ylabel('Processing Time (ms)')\n",
-    "    plt.title('comparison of addtional function')\n",
-    "    plt.show()\n",
+    "\n",
     "\n",
     "\n",
     "plotting(time_explicit_alc, time_implicit_alc, time_gpuarynp, time_gpuary_alc, time_host, L)"
