cuda-ipynb-update

--- a/e4750/hw2/hw2-cuda.ipynb
+++ b/e4750/hw2/hw2-cuda.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pycuda.autoinit\n",
     "from pycuda.compiler import SourceModule\n",
@@ -127,53 +129,53 @@
     "        return decrypted, time.time()-start\n",
     "\n",
     "\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 125,
-   "source": [
-    "cipher = cudaCipher2()\n",
-    "decrypted_py, time_py = cipher.pyCipher(cipher.text_de)\n",
-    "print(decrypted_py)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<class 'int'>\n",
       "in the year 1878 i took my degree of doctor of medicine of the university of london, and proceeded to netley to go through the course prescribed for surgeons in the army. having completed my studies there, i was duly attached to the fifth northumberland fusiliers as assistant surgeon. the regiment was stationed in india at the time, and before i could join it, the second afghan war had broken out. on landing at bombay, i learned that my corps had advanced through the passes, and was already deep in the enemy's country. i followed, however, with many other officers who were in the same situation as myself, and succeeded in reaching candahar in safety, where i found my regiment, and at once entered upon my new duties. the campaign brought honours and promotion to many, but for me it had nothing but misfortune and disaster. i was removed from my brigade and attached to the berkshires, with whom i served at the fatal battle of maiwand. there i was struck on the shoulder by a jezail bullet, which shattered the bone and grazed the subclavian artery. i should have fallen into the hands of the murderous ghazis had it not been for the devotion and courage shown by murray, my orderly, who threw me across a packhorse, and succeeded in bringing me safely to the british lines. worn with pain, and weak from the prolonged hardships which i had undergone, i was removed, with a great train of wounded sufferers, to the base hospital at peshawar. here i rallied, and had already improved so far as to be able to walk about the wards, and even to bask a little upon the veranda, when i was struck down by enteric fever, that curse of our indian possessions. for months my life was despaired of, and when at last i came to myself and became convalescent, i was so weak and emaciated that a medical board determined that not a day should be lost in sending me back to england. i was despatched, accordingly, in the troopship orontes, and landed a month later on portsmouth jetty, with my health irretrievably ruined, but with permission from a paternal government to spend the next nine months in attempting to improve it. i had neither kith nor kin in england, and was therefore as free as air--or as free as an income of eleven shillings and sixpence a day will permit a man to be. under such circumstances i naturally gravitated to london, that great cesspool into which all the loungers and idlers of the empire are irresistibly drained. there i stayed for some time at a private hotel in the strand, leading a comfortless, meaningless existence, and spending such money as i had, considerably more freely than i ought. so alarming did the state of my finances become, that i soon realized that i must either leave the metropolis and rusticate somewhere in the country, or that i must make a complete alteration in my style of living. choosing the latter alternative, i began by making up my mind to leave the hotel, and take up my quarters in some less pretentious and less expensive domicile. on the very day that i had come to this conclusion, i was standing at the criterion bar, when someone tapped me on the shoulder, and turning round i recognized young stamford, who had been a dresser under me at bart's. the sight of a friendly face in the great wilderness of london is a pleasant thing indeed to a lonely man. in old days stamford had never been a particular crony of mine, but now i hailed him with enthusiasm, and he, in his turn, appeared to be delighted to see me. in the exuberance of my joy, i asked him to lunch with me at the holborn, and we started off together in a hansom\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "cipher = cudaCipher2()\n",
+    "decrypted_py, time_py = cipher.pyCipher(cipher.text_de)\n",
+    "print(decrypted_py)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 124,
-   "source": [
-    "# print(cipher.text_asc)\n",
-    "decrypted_dev,time_dev = cipher.devCipher(cipher.text_de)\n",
-    "print(time_dev,'\\n',decrypted_dev)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "0.7038400173187256 \n",
       " [\"in the year 1878 i took my degree of doctor of medicine of the university of london, and proceeded to netley to go through the course prescribed for surgeons in the army. having completed my studies there, i was duly attached to the fifth northumberland fusiliers as assistant surgeon. the regiment was stationed in india at the time, and before i could join it, the second afghan war had broken out. on landing at bombay, i learned that my corps had advanced through the passes, and was already deep in the enemy's country. i followed, however, with many other officers who were in the same situation as myself, and succeeded in reaching candahar in safety, where i found my regiment, and at once entered upon my new duties. the campaign brought honours and promotion to many, but for me it had nothing but misfortune and disaster. i was removed from my brigade and attached to the berkshires, with \"]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# print(cipher.text_asc)\n",
+    "decrypted_dev,time_dev = cipher.devCipher(cipher.text_de)\n",
+    "print(time_dev,'\\n',decrypted_dev)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
@@ -298,116 +300,150 @@
     "                decrypted += chr(asc)\n",
     "        # print(type(decrypted))\n",
     "        return decrypted, time.time()-start"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 188,
-   "source": [
-    "    # Main code\n",
-    "    # create a instance of cudaCipher\n",
-    "    cipher = cudaCipher()\n",
-    "    \n",
-    "    # Open text file to be deciphered.\n",
-    "    # Preprocess the file to separate sentences\n",
-    "    text_de = open('deciphertext.txt','r').read()\n",
-    "    \n",
-    "    # Split string into list populated with '.' as delimiter.\n",
-    "    sentences = text_de.split('. ')\n",
-    "\n",
-    "    # Empty lists to hold deciphered sentences, execution times\n",
-    "    decrypted_c = []\n",
-    "    decrypted_p = []\n",
-    "    tc = 0\n",
-    "    tp = 0\n",
-    "\n",
-    "    # Loop over each sentence in the list\n",
-    "    for sentence in sentences:\n",
-    "        temp_sc, temp_tc = cipher.devCipher(sentence)\n",
-    "        temp_sp, temp_tp = cipher.pyCipher(sentence)\n",
-    "        decrypted_c.append(temp_sc)\n",
-    "        decrypted_p.append(temp_sp)\n",
-    "        tc += temp_tc\n",
-    "        tp += temp_tp\n",
-    "    tc /= len(sentences)\n",
-    "    tp /= len(sentences)\n",
-    "\n",
-    "    # post process the string(s) if required\n",
-    "    decrypted_cuda = []\n",
-    "    for sentence in decrypted_c:\n",
-    "        for i in sentence:\n",
-    "            a = i\n",
-    "        decrypted_cuda.append(a)\n",
-    "\n",
-    "    # Execution time\n",
-    "    print(\"CUDA output cracked in \", tc, \" milliseconds per sentence.\")\n",
-    "    print(\"Python output cracked in \", tp, \" milliseconds per sentence.\")"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "CUDA output cracked in  0.26849745281717996  milliseconds per sentence.\n",
       "Python output cracked in  6.594441153786399e-05  milliseconds per sentence.\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Main code\n",
+    "# create a instance of cudaCipher\n",
+    "cipher = cudaCipher()\n",
+    "\n",
+    "# Open text file to be deciphered.\n",
+    "# Preprocess the file to separate sentences\n",
+    "text_de = open('deciphertext.txt','r').read()\n",
+    "\n",
+    "# Split string into list populated with '.' as delimiter.\n",
+    "sentences = text_de.split('. ')\n",
+    "\n",
+    "# Empty lists to hold deciphered sentences, execution times\n",
+    "decrypted_c = []\n",
+    "decrypted_p = []\n",
+    "tc = 0\n",
+    "tp = 0\n",
+    "\n",
+    "# Loop over each sentence in the list\n",
+    "for sentence in sentences:\n",
+    "    temp_sc, temp_tc = cipher.devCipher(sentence)\n",
+    "    temp_sp, temp_tp = cipher.pyCipher(sentence)\n",
+    "    decrypted_c.append(temp_sc)\n",
+    "    decrypted_p.append(temp_sp)\n",
+    "    tc += temp_tc\n",
+    "    tp += temp_tp\n",
+    "tc /= len(sentences)\n",
+    "tp /= len(sentences)\n",
+    "\n",
+    "# post process the string(s) if required\n",
+    "decrypted_cuda = []\n",
+    "for sentence in decrypted_c:\n",
+    "    for i in sentence:\n",
+    "        a = i\n",
+    "    decrypted_cuda.append(a)\n",
+    "\n",
+    "# Execution time\n",
+    "print(\"CUDA output cracked in \", tc, \" milliseconds per sentence.\")\n",
+    "print(\"Python output cracked in \", tp, \" milliseconds per sentence.\")\n",
+    "\n",
+    "decrypted_text = open('decrypted_text.txt', 'w')\n",
+    "decrypted_text.write(''.join(decrypted_cuda+'. '))\n",
+    "decrypted_text.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-1-9c01fa4fa11d>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-9c01fa4fa11d>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(\"Checkpoint: Do python and kernel decryption match? Checking...\")\n",
+    "    for i in range(len(decrypted_cuda)):\n",
+    "        assert decrypted_cuda is decrypted_p\n",
+    "# dump bad output to file for debugging\n",
+    "except AssertionError:\n",
+    "    print('Checkpoint failed: Python and CUDA kernel decryption do not match. Try Again!')\n",
+    "# If ciphers agree, proceed to write decrypted text to file and plot execution times\n",
+    "else: \n",
+    "    print(\"Checkpoint passed!\")\n",
+    "    print(\"Writing decrypted text to file...\")\n",
+    "    \n",
+    "# Write cuda output to file\n",
+    "\n",
+    "# Dot plot the  per-sentence execution times"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 182,
-   "source": [
-    "sentence = open('deciphertext.txt','r').read()\n",
-    "sentence = sentence.encode('utf-8')\n",
-    "type(sentence[1])"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "int"
       ]
      },
+     "execution_count": 182,
      "metadata": {},
-     "execution_count": 182
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "sentence = open('deciphertext.txt','r').read()\n",
+    "sentence = sentence.encode('utf-8')\n",
+    "type(sentence[1])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "24ab3c5e446ff7973524c6c9862eda312f56eadfd6e7f2ec888d2b57fe4b95a6"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.6.9",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.9 64-bit ('cudaEnv': venv)"
-  },
-  "interpreter": {
-   "hash": "9c261f4f075f8250ca183c3001dc8c9932ad185fa8e9f03cf8c69697249d4175"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
