--- a/e4040/hw1/task2-mlp_numpy.ipynb
+++ b/e4040/hw1/task2-mlp_numpy.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -515,16 +515,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3.88265271 3.92406074 3.94054143 ... 3.87568884 3.92772045 4.19073467]\n",
-      " [3.88265271 3.92406074 3.94054143 ... 3.87568884 3.92772045 4.19073467]\n",
-      " [3.88265271 3.92406074 3.94054143 ... 3.87568884 3.92772045 4.19073467]\n",
-      " ...\n",
-      " [3.88265271 3.92406074 3.94054143 ... 3.87568884 3.92772045 4.19073467]\n",
-      " [3.88265271 3.92406074 3.94054143 ... 3.87568884 3.92772045 4.19073467]\n",
-      " [3.88265271 3.92406074 3.94054143 ... 3.87568884 3.92772045 4.19073467]]\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "Is out correct? False\n",
+      "Is out correct? True\n",
       "Is dx correct? True\n",
       "Is dw correct? True\n",
       "Is db correct? True\n"
@@ -573,113 +564,6 @@
     "print(\"Is dx correct? {}\".format(np.allclose(dx, dx_check)))\n",
     "print(\"Is dw correct? {}\".format(np.allclose(dw, dw_check)))\n",
     "print(\"Is db correct? {}\".format(np.allclose(db, db_check)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " ...\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]]\n",
-      "[[3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " ...\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]\n",
-      " [3.9317901  3.98372813 3.95599393 ... 4.17693228 3.79609416 3.88575129]]\n",
-      "[[1. 1. 1. ... 1. 1. 1.]\n",
-      " [1. 1. 1. ... 1. 1. 1.]\n",
-      " [1. 1. 1. ... 1. 1. 1.]\n",
-      " ...\n",
-      " [1. 1. 1. ... 1. 1. 1.]\n",
-      " [1. 1. 1. ... 1. 1. 1.]\n",
-      " [1. 1. 1. ... 1. 1. 1.]]\n",
-      "Is out correct? False\n",
-      "Is dx correct? True\n",
-      "Is dw correct? True\n",
-      "Is db correct? True\n"
-     ]
-    }
-   ],
-   "source": [
-    "# THE FOLLOWING IS THE VERIFICATION CODE     #\n",
-    "# DO NOT CHANGE IT.                        #\n",
-    "\n",
-    "## First, let's make a dense layer\n",
-    "from utils.layer_utils import DenseLayer\n",
-    "\n",
-    "## Affine + ReLU\n",
-    "test_dense = DenseLayer(input_dim=X_train.shape[1],output_dim=100)\n",
-    "w, b = test_dense.params\n",
-    "\n",
-    "## Data for correctness check\n",
-    "x = X_dev\n",
-    "dout = np.ones((x.shape[0], 100))\n",
-    "\n",
-    "out = test_dense.feedforward(x)\n",
-    "print(out)\n",
-    "print(out)\n",
-    "\n",
-    "dx = test_dense.backward(dout)\n",
-    "print(out)\n",
-    "\n",
-    "dw, db = test_dense.gradients\n",
-    "\n",
-    "## check by tf.GradientTape.gradients()\n",
-    "x_tf = tf.Variable(x, name='x')\n",
-    "w_tf = tf.Variable(w, name='w')\n",
-    "b_tf = tf.Variable(b, name='b')\n",
-    "\n",
-    "def dense_layer(x, w, b):\n",
-    "    return tf.nn.relu(tf.matmul(x, w) + b)\n",
-    "\n",
-    "with tf.GradientTape() as tape:\n",
-    "    tape.watch(w_tf)\n",
-    "    out_tf = dense_layer(x_tf, w_tf, b_tf)\n",
-    "    dx_tf, dw_tf, db_tf = tape.gradient(out_tf, (x_tf, w_tf, b_tf))\n",
-    "    \n",
-    "out_check = out_tf.numpy()\n",
-    "dx_check = dx_tf.numpy()\n",
-    "dw_check = dw_tf.numpy()\n",
-    "db_check = db_tf.numpy()\n",
-    "\n",
-    "## Print validation result\n",
-    "print(\"Is out correct? {}\".format(np.allclose(out, out_check)))\n",
-    "# print(out_check)\n",
-    "print(\"Is dx correct? {}\".format(np.allclose(dx, dx_check)))\n",
-    "print(\"Is dw correct? {}\".format(np.allclose(dw, dw_check)))\n",
-    "print(\"Is db correct? {}\".format(np.allclose(db, db_check)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 0 3 5]\n",
-      " [4 0 6 0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.array([[1,-2,3,5],[4,-5,6,-7]])\n",
-    "a[a<0]=0\n",
-    "print(a)"
    ]
   },
   {
