--- a/e4040/hw1/mytask1.ipynb
+++ b/e4040/hw1/mytask1.ipynb
@@ -219,6 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "efd9599a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,6 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "9f078be9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,6 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "08246eaf",
    "metadata": {},
    "outputs": [
     {
@@ -281,6 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "1169e57c",
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "4588d7b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,6 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "f6e945de",
    "metadata": {},
    "outputs": [
     {
@@ -618,6 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "92d4d991",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -628,7 +635,8 @@
    "hash": "d8d690096e4eed88817845be1d65f715f135176ebd2e3b11765afc342cfa04f8"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -641,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
