--- a/e4040/hw2/task2-regularization.ipynb
+++ b/e4040/hw2/task2-regularization.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data shape:  (60000, 784)\n",
+      "Training labels shape:  (60000,)\n",
+      "Validation data shape:  (10000, 784)\n",
+      "Validation labels shape:  (10000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the raw Fashion-MNIST data.\n",
     "train, val = fashion_mnist.load_data()\n",
@@ -102,9 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean of a2:  [-3.71855056  3.21810258 -2.44388986]\n",
+      "var of a2:  [45.32564755 70.17112882 32.35120115]\n",
+      "(train) mean of a2_bn:  [-1.84297022e-16 -1.31006317e-16 -1.79856130e-16]\n",
+      "(train) var of a2_bn:  [0.99999978 0.99999986 0.99999969]\n"
+     ]
+    }
+   ],
    "source": [
     "####################################################\n",
     "# Checking/verification code. Don't change it.     #\n",
@@ -143,9 +165,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "real mean of data:  [-4.66597413  3.54558219 -2.76245923]\n",
+      "real var of data:  [52.21537611 68.48830775 34.90757554]\n",
+      "moving mean of data:  [[-4.63615489  3.52523532 -2.76508416]]\n",
+      "moving var of data:  [[51.29127262 69.07311671 34.80902842]]\n",
+      "********************************************************************************\n",
+      "(test) mean of a2:  [-4.91240989  4.48112074 -3.35659034]\n",
+      "(test) var of a2:  [58.07744964 66.79717707 36.85179509]\n",
+      "(test) mean of a2_bn:  [-0.03857344  0.11501415 -0.10025667]\n",
+      "(test) var of a2_bn:  [1.13230644 0.96705014 1.05868466]\n"
+     ]
+    }
+   ],
    "source": [
     "#######################################\n",
     "# Checking code. Don't change it.     #\n",
@@ -198,9 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'float' and 'NoneType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9960/3371331512.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0ma2_bn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcache\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbn_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbeta\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbn_config\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"test\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mda2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdgamma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdbeta\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbn_backward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mda2_bn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcache\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m###################################################\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32me:\\code\\github\\21fall_courses\\e4040\\hw2\\utils\\reg_funcs.py\u001b[0m in \u001b[0;36mbn_backward\u001b[1;34m(dout, cache)\u001b[0m\n\u001b[0;32m    173\u001b[0m     \u001b[0mN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mD\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    174\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 175\u001b[1;33m     \u001b[0mx_hat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mmean\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0meps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    176\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m     \u001b[0mdgamma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdout\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mx_hat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'float' and 'NoneType'"
+     ]
+    }
+   ],
    "source": [
     "# After verifying the forward function and save the bn_config.\n",
     "x_in = np.random.randn(N, D)\n",
@@ -211,6 +262,7 @@
     "gamma = np.ones(H2)\n",
     "beta = np.zeros(H2)\n",
     "a2_bn, cache = bn_forward(a2, gamma, beta, bn_config, \"test\")\n",
+    "\n",
     "da2, dgamma, dbeta = bn_backward(da2_bn, cache)\n",
     "\n",
     "###################################################\n",
@@ -234,9 +286,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# After verifying the forward function and save the bn_config.\n",
+    "x_in = np.random.randn(N, D)\n",
+    "a2 = np.maximum(x_in.dot(w1),0).dot(w2)\n",
+    "da2_bn = np.ones_like(a2)\n",
+    "# Test backward function with tensorflow\n",
+    "# You will use bn_config = {\"eps\":1e-5, \"decay\":0.9, \"moving_mean\":moving_mean, \"moving_var\":moving_var}\n",
+    "gamma = np.ones(H2)\n",
+    "beta = np.zeros(H2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "_, cache = bn_forward(a2, gamma, beta, bn_config, \"train\")\n",
+    "\n",
+    "a2_bn, _ = bn_forward(a2, gamma, beta, bn_config, \"test\")\n",
+    "\n",
+    "da2, dgamma, dbeta = bn_backward(da2_bn, cache)\n",
+    "\n",
+    "###################################################\n",
+    "# TODO: verify the backward code. You should use  #\n",
+    "# the parameters in bn_config and other variables #\n",
+    "# above.                                          #\n",
+    "###################################################\n",
+    "\n",
+    "a2_tf = tf.Variable(a2, dtype=tf.float32)\n",
+    "gamma_tf = tf.Variable(gamma, dtype=tf.float32)\n",
+    "beta_tf = tf.Variable(beta, dtype=tf.float32)\n",
+    "\n",
+    "\n",
+    "\n",
+    "with tf.GradientTpe() as tape:\n",
+    "    tape.watch(a2_tf)\n",
+    "    a2_bn_check = tf.nn.batch_normalization(\n",
+    "        a2_tf,\n",
+    "        mean=tf.math.reduce_mean(a2, axis=0),\n",
+    "        variance=tf.math.reduce_variance(a2, axis=0),\n",
+    "        offset=beta_tf,\n",
+    "        scale=gamma_tf\n",
+    "    )\n",
+    "    da2_check = tape.gradient(a2_bn_check, a2_tf)\n",
+    "    dgamma_check = tape.gradient(a2_bn_check, gamma_tf)\n",
+    "    dbeta_check = tape.gradient(a2_bn_check, beta_tf)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "###################################################\n",
+    "# ENDTODO #\n",
+    "###################################################\n",
+    "    \n",
+    "# Make comparison\n",
+    "print(\"Is a2_bn correct? {}\".format(np.allclose(a2_bn, a2_bn_check)))\n",
+    "print(\"Is da2 correct? {}\".format(np.allclose(da2, da2_check)))\n",
+    "print(\"Is dgamma correct? {}\".format(np.allclose(dgamma, dgamma_check)))\n",
+    "print(\"Is dbeta correct? {}\".format(np.allclose(dbeta, dbeta_check)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "output_type": "error",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at w.executeCodeCell (c:\\Users\\12110\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1101343141\\out\\client\\extension.js:52:301180)",
+      "at w.execute (c:\\Users\\12110\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1101343141\\out\\client\\extension.js:52:300551)",
+      "at w.start (c:\\Users\\12110\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1101343141\\out\\client\\extension.js:52:296215)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
+      "at async t.CellExecutionQueue.executeQueuedCells (c:\\Users\\12110\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1101343141\\out\\client\\extension.js:52:310950)",
+      "at async t.CellExecutionQueue.start (c:\\Users\\12110\\.vscode\\extensions\\ms-toolsai.jupyter-2021.9.1101343141\\out\\client\\extension.js:52:310490)"
+     ]
+    }
+   ],
    "source": [
     "print(dgamma_tf)"
    ]
@@ -675,9 +807,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "50286e954820f4eea984950900e1b0d0edcf026073fd0a170f2369702fdf1a29"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit ('tf26': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -690,7 +824,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
