--- a/e4750/hw3/hw3-pycuda.ipynb
+++ b/e4750/hw3/hw3-pycuda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,13 @@
     "import pycuda.gpuarray as gpuarray\n",
     "import numpy as np\n",
     "import time\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.signal import convolve2d\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,10 +30,10 @@
     "\t\t# \"\"\"\n",
     "\t\t# Attributes for instance of EncoderDecoder module\n",
     "\t\t# \"\"\"\n",
-    "\t\tself.mod = self.getSourceModule()\n",
+    "\t\tself.mod = None\n",
     "\t\tpass\n",
     "\t\n",
-    "\tdef getSourceModule(self):\n",
+    "\tdef getSourceModule(self, method):\n",
     "\t\t# kernel code wrapper\n",
     "\t\tkernelwrapper_naive = \"\"\"\n",
     "\t\t\t#include <stdio.h>\n",
@@ -56,28 +57,34 @@
     "\t\t\t\t// for every pixel in mask\n",
     "\t\t\t\tfor(int i=0; i<mask_w; i++){\n",
     "\t\t\t\t\t// x coordinate in N\n",
-    "\t\t\t\t\tint col_i = col_start + i;\n",
+    "\t\t\t\t\tint row_i = row_start + i;\n",
     "\t\t\t\t\t// if in the range of N\n",
-    "\t\t\t\t\tif(col_i>=0 && col_i<n_w){\n",
+    "\t\t\t\t\tif(row_i>=0 && row_i<n_h){\n",
     "\t\t\t\t\t\tfor(int j=0; j<mask_w; j++){\n",
     "\t\t\t\t\t\t\t// y coordinate in N\n",
-    "\t\t\t\t\t\t\tint row_i = row_start + j;\n",
-    "\t\t\t\t\t\t\t//if in the range of N\n",
-    "\t\t\t\t\t\t\tif(row_i>=0 && row_i<n_h){\n",
-    "\t\t\t\t\t\t\t\tp_value += N[col_i*n_w+row_i] * M[i*mask_w+j];\n",
+    "\t\t\t\t\t\t\tint col_i = col_start + j;\n",
+    "\t\t\t\t\t\t\t// if in the range of N\n",
+    "\t\t\t\t\t\t\tif(col_i>=0 && col_i<n_w){\n",
+    "\t\t\t\t\t\t\t\tp_value += N[row_i*n_w+col_i] * M[mask_w*mask_w-(i*mask_w+j)-1];\n",
     "\t\t\t\t\t\t\t\t//int a = col_i*n_w+row_i;\n",
     "\t\t\t\t\t\t\t\t//printf(\"%d\", a);\n",
     "\t\t\t\t\t\t\t}\n",
     "\t\t\t\t\t\t}\n",
     "\t\t\t\t\t}\n",
     "\t\t\t\t}\n",
-    "\t\t\t\tP[col*n_w+row] = p_value;\n",
+    "\t\t\t\t//P[row*n_w+col] = N[row*n_w+col];\n",
+    "\t\t\t\tP[row*n_w+col] = p_value;\n",
     "\t\t\t}\n",
     "\t\t\n",
     "\t\t\"\"\" # you can either use a string or save the kernel in kernel.cu file and reference it here.\n",
     "\t\t# Compile the kernel code when an instance\n",
     "\t\t# of this class is made. \n",
-    "\t\treturn SourceModule(kernelwrapper_naive)\n",
+    "\t\tif method == 'naive':\n",
+    "\t\t\tmod = SourceModule(kernelwrapper_naive)\n",
+    "\t\telse:\n",
+    "\t\t\tprint(\"Please enter the correct method name! -naive\")\n",
+    "\t\t\t\n",
+    "\t\tself.mod = mod\n",
     "\n",
     "\tdef getBlockGridDim(self, N, blocksize=32):\n",
     "\t\tBlockDim = (blocksize, blocksize,1)\n",
@@ -95,11 +102,16 @@
     "\t\t\t\t(test phase) None\n",
     "\t\t\"\"\"\n",
     "\t\t# implement this, note you can change the function signature (arguments and return type)\n",
+    "\t\t# convert the datatype\n",
+    "\t\tN = N.astype(np.float32)\n",
+    "\t\tM = M.astype(np.float32)\n",
+    "\n",
+    "\t\tself.getSourceModule('naive')\n",
     "\t\tfunc_conv = self.mod.get_function(\"conv_gpu_naive\")\n",
-    "\t\theight, width = N.shape\n",
-    "\t\tprint(height,width)\n",
+    "\t\twidth, height = N.shape\n",
+    "\t\t# print(height,width)\n",
     "\t\tmask_width = M.shape[0]\n",
-    "\t\tprint(mask_width)\n",
+    "\t\t# print(mask_width)\n",
     "\t\t# the result matrix\n",
     "\t\tP = np.empty_like(N)\n",
     "\t\t# copy to device global memory\n",
@@ -131,60 +143,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 100\n",
-      "3\n"
+      "False\n",
+      "[[0.26316992 0.00561049 0.09780918 0.66785345 0.7254731  0.98226722]\n",
+      " [0.73632977 0.6206267  0.9837882  0.60846583 0.99053815 0.06793333]\n",
+      " [0.01167891 0.31124386 0.7169592  0.52563697 0.75229281 0.18951355]\n",
+      " [0.0350639  0.71130103 0.2453889  0.64449197 0.07635259 0.25546522]\n",
+      " [0.93311056 0.34697135 0.04985432 0.88724987 0.40836074 0.11120028]] \n",
+      "\n",
+      "[[0.7363298  0.6206267  0.9837882  0.60846585 0.         0.06793333]\n",
+      " [0.01167891 0.31124386 0.7169592  0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.        ]] \n",
+      "\n",
+      "[[0.6206267  0.9837882  0.60846585 0.9905382  0.06793333 0.        ]\n",
+      " [0.31124386 0.7169592  0.525637   0.7522928  0.18951355 0.        ]\n",
+      " [0.711301   0.24538891 0.644492   0.0763526  0.2554652  0.        ]\n",
+      " [0.34697136 0.04985432 0.8872499  0.40836075 0.11120028 0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.        ]]\n"
      ]
     }
    ],
    "source": [
-    "N = np.ones((100,100),dtype=np.float)\n",
-    "M = np.array(([0,0,0],[0,1,0],[0,0,0]),dtype=np.float)\n",
+    "N = np.random.rand(5,6)\n",
+    "M = np.random.rand(3,3)\n",
+    "M = np.array([[1,0,0],[0,0,0],[0,0,0]])\n",
+    "# print(M)\n",
     "conver = Convolution()\n",
-    "P = conver.conv_gpu_naive(N,M)\n"
+    "P_cu = conver.conv_gpu_naive(N,M)\n",
+    "P_sp = convolve2d(N.astype(np.float32), M.astype(np.float32), mode='same')\n",
+    "print(np.allclose(P_cu, P_sp))\n",
+    "print(N,'\\n')\n",
+    "print(P_cu,'\\n')\n",
+    "print(P_sp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 1. 1. ... 1. 1. 1.]\n",
-      " [1. 1. 1. ... 1. 1. 1.]\n",
-      " [1. 1. 1. ... 1. 1. 1.]\n",
+      "[[0.25858879 0.76644024 0.23690224 ... 0.10312783 0.802767   0.2767137 ]\n",
+      " [0.48213143 0.43717487 0.24105782 ... 0.42669798 0.75363248 0.88913923]\n",
+      " [0.96097627 0.33534357 0.14011016 ... 0.31211257 0.05761873 0.35872807]\n",
       " ...\n",
-      " [1. 1. 1. ... 1. 1. 1.]\n",
-      " [1. 1. 1. ... 1. 1. 1.]\n",
-      " [1. 1. 1. ... 1. 1. 1.]]\n",
-      "[[9.88131292e-324 9.88131292e-324 9.88131292e-324 ... 9.88131292e-324\n",
-      "  9.88131292e-324 9.88131292e-324]\n",
-      " [9.88131292e-324 9.88131292e-324 9.88131292e-324 ... 9.88131292e-324\n",
-      "  9.88131292e-324 9.88131292e-324]\n",
-      " [9.88131292e-324 9.88131292e-324 9.88131292e-324 ... 9.88131292e-324\n",
-      "  9.88131292e-324 9.88131292e-324]\n",
+      " [0.94446634 0.94470696 0.26177127 ... 0.25845082 0.92723354 0.9162604 ]\n",
+      " [0.95204508 0.47338191 0.06090975 ... 0.23428814 0.87261467 0.15879089]\n",
+      " [0.05189116 0.74409996 0.25270494 ... 0.71068001 0.58741064 0.44194069]]\n",
+      "[[4.37174857e-01 2.41057813e-01 7.93456316e-01 ... 7.53632486e-01\n",
+      "  8.89139235e-01 0.00000000e+00]\n",
+      " [3.35343570e-01 1.40110165e-01 6.23291790e-01 ... 5.76187335e-02\n",
+      "  3.58728081e-01 0.00000000e+00]\n",
+      " [5.04994333e-01 8.71350057e-04 1.13818854e-01 ... 6.85880005e-01\n",
+      "  8.24093997e-01 0.00000000e+00]\n",
       " ...\n",
-      " [7.49257087e-001 2.01161317e-001 6.67803435e-001 ... 6.85166287e-001\n",
-      "  9.31359495e-001 3.19413440e-320]\n",
-      " [6.93300502e-310 6.93300502e-310 0.00000000e+000 ... 7.07801409e-001\n",
-      "  4.07992940e-001 3.57359531e-001]\n",
-      " [3.26685099e-001 7.83306767e-001 2.73801339e-001 ... 2.61866492e-316\n",
-      "  6.40236694e+149 2.40362937e-320]]\n"
+      " [4.73381907e-01 6.09097518e-02 2.18991861e-02 ... 8.72614682e-01\n",
+      "  1.58790886e-01 0.00000000e+00]\n",
+      " [7.44099975e-01 2.52704948e-01 7.44353354e-01 ... 5.87410629e-01\n",
+      "  4.41940695e-01 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 ... 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]]\n",
+      "[[4.37174857e-01 2.41057813e-01 7.93456316e-01 ... 7.53632486e-01\n",
+      "  8.89139235e-01 0.00000000e+00]\n",
+      " [3.35343570e-01 1.40110165e-01 6.23291790e-01 ... 5.76187335e-02\n",
+      "  3.58728081e-01 0.00000000e+00]\n",
+      " [5.04994333e-01 8.71350057e-04 1.13818854e-01 ... 6.85880005e-01\n",
+      "  8.24093997e-01 0.00000000e+00]\n",
+      " ...\n",
+      " [4.73381907e-01 6.09097518e-02 2.18991861e-02 ... 8.72614682e-01\n",
+      "  1.58790886e-01 0.00000000e+00]\n",
+      " [7.44099975e-01 2.52704948e-01 7.44353354e-01 ... 5.87410629e-01\n",
+      "  4.41940695e-01 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 ... 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]]\n"
      ]
     }
    ],
    "source": [
-    "print(N)\n",
-    "print(P)"
+    "\n"
    ]
   },
   {
